# statusmenu-plugin-fmms

./: Makefile.am  Makefile.in  configure  configure.ac
data/: Makefile.am  Makefile.in  statusmenu_fmms.desktop
debian/: README.Debian  changelog  control  copyright  files  rules  statusmenu-fmms.substvars
src/: Makefile.am  Makefile.in  fmms_status_plugin.c  fmms_status_plugin.h
